--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         <div class="item">
             <p class="title">Exhibitions</p>
             <p class="infoText hidden">
-                <a href="/pages/VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
-                    <a href="/pages/Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
-                    <a href="/pages/Forest-Falls-Behind.html">Forest Falls Behind</a>
+                <a href="pages/VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
+                    <a href="pages/Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
+                    <a href="pages/Forest-Falls-Behind.html">Forest Falls Behind</a>
             </p>
         </div>
 
         <div class="item">
-            <a href="/pages/contact.html">Contact</a>
+            <a href="pages/contact.html">Contact</a>
         </div>
 
         <div class="item">
-            <a href="/pages/CV.html">CV</a>
+            <a href="pages/CV.html">CV</a>
         </div>
 
     </div>
