--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="navigation">
         <div class="item">
-            <a href="/pages/about.html">About</a>
+            <a href="pages/about.html">About</a>
         </div>
 
         <div class="item">
