--- a/pages/VCA-Graduate-Exhibition-2024.html
+++ b/pages/VCA-Graduate-Exhibition-2024.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="content">
-            <img src="/img/Grad2024/2024.11.27 Maddison Wandel - 1.jpg" alt="Grad2024-01">
+            <img src="/img/Grad2024/Grad2024-01" alt="Grad2024-01">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
