--- a/pages/VCA-Graduate-Exhibition-2024.html
+++ b/pages/VCA-Graduate-Exhibition-2024.html
@@ -41,35 +41,35 @@
     </div>
 
     <div class="content">
-            <img src="/img/Grad2024/Grad2024-01" alt="Grad2024-01">
+            <img src="MaddisonWandel/img/Grad2024/Grad2024-01" alt="Grad2024-01">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/2024.11.27 Maddison Wandel - 4.jpg" alt="Grad2024-02">
+            <img src="MaddisonWandel/img/Grad2024/2024.11.27 Maddison Wandel - 4.jpg" alt="Grad2024-02">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/2024.11.27 Maddison Wandel - 5.jpg" alt="Grad2024-03">
+            <img src="MaddisonWandel/img/Grad2024/2024.11.27 Maddison Wandel - 5.jpg" alt="Grad2024-03">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/2024.11.27 Maddison Wandel - 7.jpg" alt="Grad2024-04">
+            <img src="MaddisonWandel/img/Grad2024/2024.11.27 Maddison Wandel - 7.jpg" alt="Grad2024-04">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/2024.11.27 Maddison Wandel - 10.jpg" alt="Grad2024-05">
+            <img src="MaddisonWandel/img/Grad2024/2024.11.27 Maddison Wandel - 10.jpg" alt="Grad2024-05">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
