--- a/pages/VCA-Graduate-Exhibition-2024.html
+++ b/pages/VCA-Graduate-Exhibition-2024.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
     <title>Maddison Wandel</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -41,35 +41,35 @@
     </div>
 
     <div class="content">
-            <img src="/img/Grad2024/Grad2024-01.jpg" alt="Grad2024-01">
+            <img src="../img/Grad2024/Grad2024-01.jpg" alt="Grad2024-01">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/Grad2024-02.jpg" alt="Grad2024-02">
+            <img src="../img/Grad2024/Grad2024-02.jpg" alt="Grad2024-02">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/Grad2024-03.jpg" alt="Grad2024-03">
+            <img src="../img/Grad2024/Grad2024-03.jpg" alt="Grad2024-03">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/Grad2024-04.jpg" alt="Grad2024-04">
+            <img src="../img/Grad2024/Grad2024-04.jpg" alt="Grad2024-04">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Grad2024/Grad2024-05.jpg" alt="Grad2024-05">
+            <img src="../img/Grad2024/Grad2024-05.jpg" alt="Grad2024-05">
             <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
                 height specific to site location. Dimensions variable.
             <br>
