--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
     <title>Maddison Wandel</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
