--- a/pages/Majilis-Travelling-Fellowship-2024.html
+++ b/pages/Majilis-Travelling-Fellowship-2024.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
     <title>Maddison Wandel</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -41,19 +41,19 @@
     </div>
 
     <div class="content">
-        <img src="/img/Majilis/Majilis1.jpg" alt="Majis01">
+        <img src="../img/Majilis/Majilis1.jpg" alt="Majis01">
         <p>Withholding, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commission Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999). Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Majilis/Majilis2.jpg" alt="Majis02">
+            <img src="../img/Majilis/Majilis2.jpg" alt="Majis02">
             <p>Withholding, 2024, Curtain rod, steel,  photograph (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/Majilis/Majilis3.jpg" alt="Majis03">
+            <img src="../img/Majilis/Majilis3.jpg" alt="Majis03">
             <p>2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.
             <br>
             <br>
@@ -70,7 +70,7 @@
 
 
 </div>
-<script src="/script.js"></script>
+<script src="../script.js"></script>
 
 </body>
 
