--- a/pages/Forest-Falls-Behind.html
+++ b/pages/Forest-Falls-Behind.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
     <title>Maddison Wandel</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -41,25 +41,25 @@
     </div>
 
     <div class="content">
-        <img src="/img/ForestFallsBehind/ForestFallsBehind1.jpg" alt="Forest-Falls-Behind01">
+        <img src="../img/ForestFallsBehind/ForestFallsBehind1.jpg" alt="Forest-Falls-Behind01">
         <p>2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.
             <br>
             <br>
             </p>
 
-            <img src="/img/ForestFallsBehind/ForestFallsBehind2.jpg" alt="Forest-Falls-Behind02">
+            <img src="../img/ForestFallsBehind/ForestFallsBehind2.jpg" alt="Forest-Falls-Behind02">
             <p>2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.            
             <br>
             <br>
             </p>
 
-            <img src="/img/ForestFallsBehind/ForestFallsBehind3.jpg" alt="Forest-Falls-Behind03">
+            <img src="../img/ForestFallsBehind/ForestFallsBehind3.jpg" alt="Forest-Falls-Behind03">
             <p>2024, Forest Falls Behind.
             <br>
             <br>
             </p>
 
-            <img src="/img/ForestFallsBehind/ForestFallsBehind4.jpg" alt="Forest-Falls-Behind04">
+            <img src="../img/ForestFallsBehind/ForestFallsBehind4.jpg" alt="Forest-Falls-Behind04">
             <p>2024, Forest Falls Behind.
             <br>
             <br>
@@ -74,7 +74,7 @@
 
 
 </div>
-<script src="/script.js"></script>
+<script src="../script.js"></script>
 
 </body>
 
