--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="isobellemccall.com">Isobelle R McCall</a></p>
+        <p>Website designed and developed by <a href="https://www.isobellemccall.com/">Isobelle R McCall</a></p>
 </div>
 
 
