--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
+    <link rel="shortcut icon" href="img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -55,7 +55,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="isobellemccall.com">Isobelle R McCall</a></p>
+        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
