--- a/pages/Forest-Falls-Behind.html
+++ b/pages/Forest-Falls-Behind.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
+    <link rel="shortcut icon" href="..img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -42,25 +42,25 @@
 
     <div class="content">
         <img src="../img/ForestFallsBehind/ForestFallsBehind1.jpg" alt="Forest-Falls-Behind01">
-        <p>2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.
+        <p><em>2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/ForestFallsBehind/ForestFallsBehind2.jpg" alt="Forest-Falls-Behind02">
-            <p>2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.            
+            <p><em>2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.</em>            
             <br>
             <br>
             </p>
 
             <img src="../img/ForestFallsBehind/ForestFallsBehind3.jpg" alt="Forest-Falls-Behind03">
-            <p>2024, Forest Falls Behind.
+            <p><em>2024, Forest Falls Behind.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/ForestFallsBehind/ForestFallsBehind4.jpg" alt="Forest-Falls-Behind04">
-            <p>2024, Forest Falls Behind.
+            <p><em>2024, Forest Falls Behind.</em>
             <br>
             <br>
             </p>
@@ -69,7 +69,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="isobellemccall.com">Isobelle R McCall</a></p>
+        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
