--- a/pages/Majilis-Travelling-Fellowship-2024.html
+++ b/pages/Majilis-Travelling-Fellowship-2024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
+    <link rel="shortcut icon" href="..img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -42,19 +42,19 @@
 
     <div class="content">
         <img src="../img/Majilis/Majilis1.jpg" alt="Majis01">
-        <p>Withholding, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commission Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999). Dimensions variable.
+        <p><em>Withholding, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commission Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999). Dimensions variable.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/Majilis/Majilis2.jpg" alt="Majis02">
-            <p>Withholding, 2024, Curtain rod, steel,  photograph (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.
+            <p><em>Withholding, 2024, Curtain rod, steel,  photograph (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/Majilis/Majilis3.jpg" alt="Majis03">
-            <p>2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.
+            <p><em>2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
             <br>
             <br>
             </p>
@@ -65,7 +65,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="isobellemccall.com">Isobelle R McCall</a></p>
+        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
