--- a/pages/VCA-Graduate-Exhibition-2024.html
+++ b/pages/VCA-Graduate-Exhibition-2024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/page-elements/mw-favicon.svg" type="mw-favicon">
+    <link rel="shortcut icon" href="..img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -42,36 +42,36 @@
 
     <div class="content">
             <img src="../img/Grad2024/Grad2024-01.jpg" alt="Grad2024-01">
-            <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.
+            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
+                height specific to site location. Dimensions variable.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/Grad2024/Grad2024-02.jpg" alt="Grad2024-02">
-            <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.
+            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
+                height specific to site location. Dimensions variable.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/Grad2024/Grad2024-03.jpg" alt="Grad2024-03">
-            <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.
+            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
+                height specific to site location. Dimensions variable.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/Grad2024/Grad2024-04.jpg" alt="Grad2024-04">
-            <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.
+            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
+                height specific to site location. Dimensions variable.</em>
             <br>
             <br>
             </p>
 
             <img src="../img/Grad2024/Grad2024-05.jpg" alt="Grad2024-05">
-            <p> Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.
+            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
+                height specific to site location. Dimensions variable.</em>
             <br>
             <br>
             </p>
@@ -81,7 +81,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="isobellemccall.com">Isobelle R McCall</a></p>
+        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
