--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="navigation">
         <div class="item">
-            <a href="pages/about.html">About</a>
+            <a href="/pages/about.html">About</a>
         </div>
 
         <div class="item">
@@ -47,7 +47,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
+    <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
