--- a/pages/VCA-Graduate-Exhibition-2024.html
+++ b/pages/VCA-Graduate-Exhibition-2024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="..img/page-elements/mw-favicon.png" type="mw-favicon">
+    <link rel="shortcut icon" href="../img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -41,47 +41,43 @@
     </div>
 
     <div class="content">
+        <div class="item">
             <img src="../img/Grad2024/Grad2024-01.jpg" alt="Grad2024-01">
-            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.</em>
-            <br>
-            <br>
-            </p>
+            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
+                </p>
+        </div>    
 
+        <div class="item">
             <img src="../img/Grad2024/Grad2024-02.jpg" alt="Grad2024-02">
-            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.</em>
-            <br>
-            <br>
+            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
             </p>
+        </div> 
 
+        <div class="item">
             <img src="../img/Grad2024/Grad2024-03.jpg" alt="Grad2024-03">
-            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.</em>
-            <br>
-            <br>
+            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
             </p>
+        </div> 
 
-            <img src="../img/Grad2024/Grad2024-04.jpg" alt="Grad2024-04">
-            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.</em>
-            <br>
-            <br>
+        <div class="item">
+            <img src="../img/Grad2024/Grad2024-03.jpg" alt="Grad2024-04">
+            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
             </p>
+        </div> 
 
-            <img src="../img/Grad2024/Grad2024-05.jpg" alt="Grad2024-05">
-            <p> <em>Calling Back (for my mother), VCA Graduate Exhibition 2024, plaster cast impressions of damaged door frame and wall, skirting, wall extension. Installation
-                height specific to site location. Dimensions variable.</em>
-            <br>
-            <br>
+        <div class="item">
+            <img src="../img/Grad2024/Grad2024-03.jpg" alt="Grad2024-05">
+            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
             </p>
+        </div> 
+    
             
     </div>
 
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
+    <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
