--- a/pages/Majilis-Travelling-Fellowship-2024.html
+++ b/pages/Majilis-Travelling-Fellowship-2024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="..img/page-elements/mw-favicon.png" type="mw-favicon">
+    <link rel="shortcut icon" href="../img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -41,25 +41,24 @@
     </div>
 
     <div class="content">
-        <img src="../img/Majilis/Majilis1.jpg" alt="Majis01">
-        <p><em>Withholding, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commission Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999). Dimensions variable.</em>
-            <br>
-            <br>
-            </p>
+        <div class="item">
+            <img src="../img/Majilis/Majilis1.jpg" alt="Majis01">
+            <p> <em> Maddison Wandel, Withholding, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commission Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999). Dimensions variable.</em>
+                </p>
+        </div>
 
+        <div class="item">
             <img src="../img/Majilis/Majilis2.jpg" alt="Majis02">
-            <p><em>Withholding, 2024, Curtain rod, steel,  photograph (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
-            <br>
-            <br>
-            </p>
+            <p> <em>Maddison Wandel, Withholding, 2024, Curtain rod, steel,  photograph (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
+                </p>
+        </div>
 
+        <div class="item">
             <img src="../img/Majilis/Majilis3.jpg" alt="Majis03">
-            <p><em>2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
-            <br>
-            <br>
-            </p>
-
-            </p>
+            <p> <em>Maddison Wandel, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
+                </p>
+        </div>
+       
     </div>
 
     </div>
