--- a/pages/CV.html
+++ b/pages/CV.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="..img/page-elements/mw-favicon.png" type="mw-favicon">
+    <link rel="shortcut icon" href="../img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body data-page="CV">
     
 <div class="header">
     <a href="https://isoebell.github.io/MaddisonWandel/">Maddison Wandel</a>
@@ -84,7 +84,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
+    <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
