--- a/pages/about.html
+++ b/pages/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="..img/page-elements/mw-favicon.svg" type="mw-favicon">
+    <link rel="shortcut icon" href="../img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body data-page="about">
     
 <div class="header">
     <a href="https://isoebell.github.io/MaddisonWandel/">Maddison Wandel</a>
@@ -47,7 +47,7 @@
             Installations using domestic materials in photographic and sculptural modes speak to the question of what is withheld when looking back. Drawing from personal experience and familial photographs and documents, I investigate the interior and exterior architectures that situate my memories in a reality away from trauma. Casted impressions of lived in domestic spaces perform tensions between what is repressed and liberated, held and released. Through my practice I seek to devise material and aesthetic apparatuses that support sharing memories of a complex childhood.
             <br>
             <br>
-            My MADA Bachelor of Fine Art (Honours) 2025 proposal can be found <a href="/pdfs/Maddison Shae Wandel 2024 Honours Proposal.pdf">here</a>.
+            My MADA Bachelor of Fine Art (Honours) 2025 proposal can be found <a href="../pdfs/Maddison Shae Wandel 2024 Honours Proposal.pdf">here</a>.
             <br>
             <br>
             
@@ -57,7 +57,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
+    <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
 </div>
 
 
