--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,11 +41,11 @@
     </div>
 
     <div class="content">
-        <p>Email: <a href="mailto:maddisonshaewandel@gmail.com">maddisonshaewandel@gmail.com</a>
+        <p>Email: <a href="mailto:maddisonshaewandel@gmail.com">maddisonshaewandel (at) gmail (dot) com</a>
             <br>
-            Instagram: <a href="https://www.instagram.com/maddisonwandel/" target="_blank">@maddisonwandel</a>
+            Instagram: <a href="https://www.instagram.com/maddisonwandel/" target="_blank">(at) maddisonwandel</a>
             <br>
-            Phone: <a href="tel:+61 431226672">+61 431226672</a>
+            Phone: <a href="tel:+61 431226672">(+) 61 431226672</a>
             <br>
             <br>
             
