--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
             Installations using domestic materials in photographic and sculptural modes speak to the question of what is withheld when looking back. Drawing from personal experience and familial photographs and documents, I investigate the interior and exterior architectures that situate my memories in a reality away from trauma. Casted impressions of lived in domestic spaces perform tensions between what is repressed and liberated, held and released. Through my practice I seek to devise material and aesthetic apparatuses that support sharing memories of a complex childhood.
             <br>
             <br>
-            My MADA Bachelor of Fine Art (Honours) 2025 proposal can be found <a href="../pdfs/Maddison Shae Wandel 2024 Honours Proposal.pdf">here</a>.
+            My MADA Bachelor of Fine Art (Honours) 2025 proposal can be found <a href="../pdfs/Maddison Shae Wandel 2024 Honours Proposal.pdf" target="_blank">here</a>.
             <br>
             <br>
             
