--- a/pages/CV.html
+++ b/pages/CV.html
@@ -56,7 +56,9 @@
             <br>
             2024 Majlis Travelling Fellowship, Fiona and Sidney Myer Gallery, Melbourne Australia 
             <br>
-            2024 TCB Fundraiser, TCB, Melbourne Australia 2024 Forest Falls Behind, Green Floor Gallery, Melbourne Australia2024 DPM Year 3 Show, VCA Arts Space, Melbourne Australia 	                		
+            2024 TCB Fundraiser, TCB, Melbourne Australia 
+            <br>
+            2024 Forest Falls Behind, Green Floor Gallery, Melbourne Australia2024 DPM Year 3 Show, VCA Arts Space, Melbourne Australia 	                		
             <br>
             2023 Dora McRae Masterclass, VCA Maddox Space, Melbourne Australia2023 DPM Year 2 Show, VCA Arts Space, Melbourne Australia
             <br>
@@ -64,7 +66,9 @@
             SELECTED INDUSTRY EXPERIENCE:
             <br>
             <br>
-            2023 July - Present, Gallery Attendant, Buxton Contemporary, Melbourne Australia2022 November - 2023 August, Assistant to Curator, Fox Galleries, Melbourne Australia 
+            2023 July - Present, Gallery Attendant, Buxton Contemporary, Melbourne Australia
+            <br>
+            2022 November - 2023 August, Assistant to Curator, Fox Galleries, Melbourne Australia 
             <br>
             2022 October - 2022 December, Gallery Assistant, Brightspace, Melbourne Australia
             <br>
@@ -72,9 +76,17 @@
             AWARDS / PRIZES:
             <br>
             <br>
-            2024 Majlis Travelling Fellowship, Finalist2024 UMSU Art Prize, Finalist2024 Stuart Black Memorial Scholarship, Awarded2023 John and Mary Kerley Traveling Scholarship, Awarded 				
+            2024 Majlis Travelling Fellowship, Finalist
             <br>
-            2023 John Vickery Scholarship, Awarded2023 Kate Daw Travelling Art Prize, Finalist
+            2024 UMSU Art Prize, Finalist
+            <br>
+            2024 Stuart Black Memorial Scholarship, Awarded
+            <br>
+            2023 John and Mary Kerley Traveling Scholarship, Awarded 				
+            <br>
+            2023 John Vickery Scholarship, Awarded
+            <br>
+            2023 Kate Daw Travelling Art Prize, Finalist
             <br>
             <br>
             
