--- a/pages/CV.html
+++ b/pages/CV.html
@@ -58,9 +58,13 @@
             <br>
             2024 TCB Fundraiser, TCB, Melbourne Australia 
             <br>
-            2024 Forest Falls Behind, Green Floor Gallery, Melbourne Australia2024 DPM Year 3 Show, VCA Arts Space, Melbourne Australia 	                		
+            2024 Forest Falls Behind, Green Floor Gallery, Melbourne Australia
             <br>
-            2023 Dora McRae Masterclass, VCA Maddox Space, Melbourne Australia2023 DPM Year 2 Show, VCA Arts Space, Melbourne Australia
+            2024 DPM Year 3 Show, VCA Arts Space, Melbourne Australia 	                		
+            <br>
+            2023 Dora McRae Masterclass, VCA Maddox Space, Melbourne Australia
+            <br>
+            2023 DPM Year 2 Show, VCA Arts Space, Melbourne Australia
             <br>
             <br>
             SELECTED INDUSTRY EXPERIENCE:
@@ -76,17 +80,13 @@
             AWARDS / PRIZES:
             <br>
             <br>
-            2024 Majlis Travelling Fellowship, Finalist
-            <br>
-            2024 UMSU Art Prize, Finalist
+            2024 Majlis Travelling Fellowship, Finalist2024 UMSU Art Prize, Finalist
             <br>
             2024 Stuart Black Memorial Scholarship, Awarded
             <br>
             2023 John and Mary Kerley Traveling Scholarship, Awarded 				
             <br>
-            2023 John Vickery Scholarship, Awarded
-            <br>
-            2023 Kate Daw Travelling Art Prize, Finalist
+            2023 John Vickery Scholarship, Awarded2023 Kate Daw Travelling Art Prize, Finalist
             <br>
             <br>
             
