--- a/pages/Forest-Falls-Behind.html
+++ b/pages/Forest-Falls-Behind.html
@@ -43,28 +43,26 @@
     <div class="content">
         
         <div class="item">
-            <img src="../img/ForestFallsBehind/ForestFallsBehind1.jpg" alt="Forest-Falls-Behind01">
-            <p><em>Maddison Wandel, 2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.</em>
-            </p>
-        </div>
-
-        <div class="item">
-            <img src="../img/ForestFallsBehind/ForestFallsBehind2.jpg" alt="Forest-Falls-Behind02">
-            <p><em>Maddison Wandel, 2024, Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable.</em>
-            </p>
-        </div>
-
-        <div class="item">
             <img src="../img/ForestFallsBehind/ForestFallsBehind3.jpg" alt="Forest-Falls-Behind03">
-            <p><em>Maddison Wandel, 2024, Forest Falls Behind.</em>
-            </p>
+            <p>Installation View. Maddison Wandel, <em>A Calling Back</em>. 2024. Pewter impressions of door frame, door and wall, Installation height specific to orginal site location. Dimensions variable. Green Floor Gallery.</p>
         </div>
 
         <div class="item">
             <img src="../img/ForestFallsBehind/ForestFallsBehind4.jpg" alt="Forest-Falls-Behind04">
-            <p><em>Maddison Wandel, 2024, Forest Falls Behind.</em>
-            </p>
+            <p>Component Image. Maddison Wandel, <em>A Calling Back</em>. 2024.</em></p>
         </div>
+
+        <div class="item">
+            <img src="../img/ForestFallsBehind/ForestFallsBehind1.jpg" alt="Forest-Falls-Behind01">
+            <p>Component Image. Maddison Wandel, <em>A Calling Back</em>. 2024.</em></p>
+        </div>
+
+        <div class="item">
+            <img src="../img/ForestFallsBehind/ForestFallsBehind2.jpg" alt="Forest-Falls-Behind02">
+            <p>Component Image. Maddison Wandel, <em>A Calling Back</em>. 2024.</em></p>
+        </div>
+
+        
 
     </div>
 
