--- a/pages/Majilis-Travelling-Fellowship-2024.html
+++ b/pages/Majilis-Travelling-Fellowship-2024.html
@@ -43,20 +43,18 @@
     <div class="content">
         <div class="item">
             <img src="../img/Majilis/Majilis1.jpg" alt="Majis01">
-            <p> <em> Maddison Wandel, Withholding, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commission Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999). Dimensions variable.</em>
-                </p>
+            <p>Installation View. Maddison Wandel. <em>Withholding</em>. 2024. Curtain rod, steel, roller blind weight, wood, photographs L-R (Commission Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999). Dimensions variable. Fiona and Sidney Myer Gallery.
+            </p>
         </div>
 
         <div class="item">
             <img src="../img/Majilis/Majilis2.jpg" alt="Majis02">
-            <p> <em>Maddison Wandel, Withholding, 2024, Curtain rod, steel,  photograph (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
-                </p>
+            <p>Component Image. Maddison Wandel. <em>Withholding</em>. 2024.</p>
         </div>
 
         <div class="item">
             <img src="../img/Majilis/Majilis3.jpg" alt="Majis03">
-            <p> <em>Maddison Wandel, 2024, Curtain rod, steel, roller blind weight, wood, photographs L-R (Commision Unit, Werribee 2002) & (Mums Bedroom, Werribee South, 1999), Dimensions variable.</em>
-                </p>
+            <p>Component Image. Maddison Wandel. <em>Withholding</em>. 2024.</p>
         </div>
        
     </div>
