--- a/pages/VCA-Graduate-Exhibition-2024.html
+++ b/pages/VCA-Graduate-Exhibition-2024.html
@@ -42,32 +42,33 @@
 
     <div class="content">
         <div class="item">
-            <img src="../img/Grad2024/Grad2024-01.jpg" alt="Grad2024-01">
-            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
-                </p>
+            <img src="../img/Grad2024/Grad2024-03.jpg" alt="Grad2024-03">
+            <p> Installation View. Maddison Wandel. <em>Calling Back (for my mother)</em>. 2024. Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions. VCA Grad Show 2024.</em>
+
+            </p>
         </div>    
 
         <div class="item">
             <img src="../img/Grad2024/Grad2024-02.jpg" alt="Grad2024-02">
-            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
+            <p> Component Image. Maddison Wandel. <em>Calling Back (for my mother)</em>. 2024
             </p>
         </div> 
 
         <div class="item">
-            <img src="../img/Grad2024/Grad2024-03.jpg" alt="Grad2024-03">
-            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
+            <img src="../img/Grad2024/Grad2024-01.jpg" alt="Grad2024-01">
+            <p> Component Image. Maddison Wandel. <em>Calling Back (for my mother)</em>. 2024
             </p>
         </div> 
 
         <div class="item">
             <img src="../img/Grad2024/Grad2024-04.jpg" alt="Grad2024-04">
-            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
+            <p> Component Image. Maddison Wandel. <em>Calling Back (for my mother)</em>. 2024
             </p>
         </div> 
 
         <div class="item">
             <img src="../img/Grad2024/Grad2024-05.jpg" alt="Grad2024-05">
-            <p> <em>Maddison Wandel Calling Back (for my mother) 2024, Impressions of broken door frame and wall cast in plaster, skirting and wall extension. The installation height is specific to the site of the impressions.</em>
+            <p> Component Image. Maddison Wandel. <em>Calling Back (for my mother)</em>. 2024
             </p>
         </div> 
     
