--- a/pages/CV.html
+++ b/pages/CV.html
@@ -44,23 +44,23 @@
         <p>EDUCATION:
             <br>
             <br>
-            2025 Bachelor of Fine Art (Honours), MADA,  Monash University
+            2025 Bachelor of Fine Art (Honours), Monash Architecture and Design (MADA),  Monash University
             <br>
-            2024 Bachelor of Fine Art, Visual Art, Victorian College of the Arts, The University of Melbourne
+            2024 Bachelor of Fine Art (Visual Art), Victorian College of the Arts (VCA), The University of Melbourne
             <br>
             <br>
             SELECTED EXHIBITIONS:
             <br>
             <br>
             2024 Cathedral Cabinet Fundraiser, Nicholas Building, Melbourne Australia
+            <br> 
+            2024 Majlis Travelling Fellowship, Fiona and Sidney Myer Gallery, Melbourne Australia
             <br>
-            2024 Majlis Travelling Fellowship, Fiona and Sidney Myer Gallery, Melbourne Australia 
-            <br>
-            2024 TCB Fundraiser, TCB, Melbourne Australia 
+            2024 TCB Fundraiser, TCB, Melbourne Australia
             <br>
             2024 Forest Falls Behind, Green Floor Gallery, Melbourne Australia
             <br>
-            2024 DPM Year 3 Show, VCA Arts Space, Melbourne Australia 	                		
+            2024 DPM Year 3 Show, VCA Arts Space, Melbourne Australia
             <br>
             2023 Dora McRae Masterclass, VCA Maddox Space, Melbourne Australia
             <br>
@@ -72,21 +72,25 @@
             <br>
             2023 July - Present, Gallery Attendant, Buxton Contemporary, Melbourne Australia
             <br>
-            2022 November - 2023 August, Assistant to Curator, Fox Galleries, Melbourne Australia 
+            2022 November - 2023 August, Assistant to Curator/ Installation Assistant, Fox Galleries, Melbourne Australia 
             <br>
-            2022 October - 2022 December, Gallery Assistant, Brightspace, Melbourne Australia
+            2022 October - 2022 December, Gallery Assistant, Brightspace Gallery, Melbourne Australia
             <br>
             <br>
             AWARDS / PRIZES:
             <br>
             <br>
-            2024 Majlis Travelling Fellowship, Finalist2024 UMSU Art Prize, Finalist
+            2024 Majlis Travelling Fellowship, Finalist
             <br>
-            2024 Stuart Black Memorial Scholarship, Awarded
+            2024 UMSU Art Prize, Finalist
             <br>
-            2023 John and Mary Kerley Traveling Scholarship, Awarded 				
+            2024 Stuart Black Memorial Scholarship, Awarded 				
             <br>
-            2023 John Vickery Scholarship, Awarded2023 Kate Daw Travelling Art Prize, Finalist
+            2023 John and Mary Kerley Traveling Scholarship, Awarded
+            <br>
+            2023 John Vickery Scholarship, Awarded
+            <br>
+            2023 Kate Daw Travelling Art Prize, Finalist
             <br>
             <br>
             
