--- a/pages/Majilis-Travelling-Fellowship-2024.html
+++ b/pages/Majilis-Travelling-Fellowship-2024.html
@@ -62,7 +62,7 @@
     </div>
 
 <div class="footer">
-        <p>Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a></p>
+    <p> Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a> © 2025</p>
 </div>
 
 
