--- a/pages/CV.html
+++ b/pages/CV.html
@@ -41,19 +41,21 @@
     </div>
 
     <div class="content">
-        <p>EDUCATION:
+        <p>EDUCATION: 
             <br>
             <br>
-            2025 Bachelor of Fine Art (Honours), Monash Architecture and Design (MADA),  Monash University
+            2025 Bachelor of Fine Art (Honours), Monash Art Design and Architecture (MADA) Monash University
             <br>
-            2024 Bachelor of Fine Art (Visual Art), Victorian College of the Arts (VCA), The University of Melbourne
+            2024 Bachelor of Fine Art (Visual Art), Victorian College of the Arts (VCA) The University of Melbourne 
             <br>
             <br>
             SELECTED EXHIBITIONS:
             <br>
             <br>
+            2024 VCA Grad Show, Victorian College of the Arts, Melbourne Australia
+            <br>
             2024 Cathedral Cabinet Fundraiser, Nicholas Building, Melbourne Australia
-            <br> 
+            <br>
             2024 Majlis Travelling Fellowship, Fiona and Sidney Myer Gallery, Melbourne Australia
             <br>
             2024 TCB Fundraiser, TCB, Melbourne Australia
@@ -64,35 +66,34 @@
             <br>
             2023 Dora McRae Masterclass, VCA Maddox Space, Melbourne Australia
             <br>
-            2023 DPM Year 2 Show, VCA Arts Space, Melbourne Australia
+            2023 DPM Year 2 Show, VCA Arts Space, Melbourne Australia 
             <br>
             <br>
-            SELECTED INDUSTRY EXPERIENCE:
+            SELECTED INDUSTRY EXPERIENCE: 
             <br>
             <br>
             2023 July - Present, Gallery Attendant, Buxton Contemporary, Melbourne Australia
             <br>
-            2022 November - 2023 August, Assistant to Curator/ Installation Assistant, Fox Galleries, Melbourne Australia 
+            2022 November - 2023 August, Assistant to Curator/ Installation Assistant, Fox Galleries, Melbourne Australia
             <br>
-            2022 October - 2022 December, Gallery Assistant, Brightspace Gallery, Melbourne Australia
+            2022 October - 2022 December, Gallery Assistant, Brightspace Gallery, Melbourne Australia 
             <br>
             <br>
-            AWARDS / PRIZES:
+            AWARDS / PRIZES: 
             <br>
             <br>
             2024 Majlis Travelling Fellowship, Finalist
             <br>
             2024 UMSU Art Prize, Finalist
             <br>
-            2024 Stuart Black Memorial Scholarship, Awarded 				
+            2024 Stuart Black Memorial Scholarship, Awarded
             <br>
             2023 John and Mary Kerley Traveling Scholarship, Awarded
             <br>
             2023 John Vickery Scholarship, Awarded
             <br>
-            2023 Kate Daw Travelling Art Prize, Finalist
-            <br>
-            <br>
+            2023 Kate Daw Travelling Art Prize, Finalist 
+            
             
             </p>
     </div>
