--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="content">
-        <p>My work explores the ways we search, understand and contest traumatic histories and memories that are buried deep within. Thinking through what is lost and absent, my practice is an engaged reimagining of the past, that attempts to recognise, explore, and spend time with uncomfortable truths and unknown realities that the present sits on top of.
+        <p>Maddison Wandel is a visual artist and writer based in Naarm/Melbourne.
             <br>
             <br>
             My MADA Bachelor of Fine Art (Honours) 2025 proposal can be found <a href="../pdfs/Maddison Shae Wandel 2024 Honours Proposal.pdf" target="_blank">here</a>.
