--- a/pages/CV.html
+++ b/pages/CV.html
@@ -27,6 +27,7 @@
                 <a href="VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
                     <a href="Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
                     <a href="Forest-Falls-Behind.html">Forest Falls Behind</a>
+                    <a href="Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
             </p>
         </div>
 
@@ -51,6 +52,10 @@
             <br>
             SELECTED EXHIBITIONS:
             <br>
+            <br>
+            2025 Monash Gradshow (Honours), Monash University, Melbourne Australia
+            <br>
+            2025 Hard/Soft Group Show, Megalo Print Studio, Canberra Australia
             <br>
             2024 VCA Grad Show, Victorian College of the Arts, Melbourne Australia
             <br>
@@ -82,6 +87,10 @@
             AWARDS / PRIZES: 
             <br>
             <br>
+            2025 The Daniel Dorall Prize in Fine Art, Awarded
+            <br>
+            2025 Tess Hill and Bill Hawtin Fine Art Scholarship, Awarded
+            <br>
             2024 Majlis Travelling Fellowship, Finalist
             <br>
             2024 UMSU Art Prize, Finalist
@@ -92,9 +101,8 @@
             <br>
             2023 John Vickery Scholarship, Awarded
             <br>
-            2023 Kate Daw Travelling Art Prize, Finalist
-            <br>
-            <br>
+            2023 Kate Daw Travelling Art Prize, Finalist 
+            
             
             </p>
     </div>
@@ -102,7 +110,7 @@
     </div>
 
 <div class="footer">
-    <p> Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a> © 2025</p>
+    <p> Website by <a href="https://www.isobellemccall.com/" target="_blank">IRM</a> © 2026</p>
 </div>
 
 
