--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body data-page="contact">
@@ -27,6 +27,7 @@
                 <a href="VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
                     <a href="Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
                     <a href="Forest-Falls-Behind.html">Forest Falls Behind</a>
+                    <a href="Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
             </p>
         </div>
 
@@ -53,7 +54,7 @@
     </div>
 
 <div class="footer">
-    <p> Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a> © 2025</p>
+    <p> Website by <a href="https://www.isobellemccall.com/" target="_blank">IRM</a> © 2026</p>
 </div>
 
 
