--- a/pages/Majilis-Travelling-Fellowship-2024.html
+++ b/pages/Majilis-Travelling-Fellowship-2024.html
@@ -27,6 +27,7 @@
                 <a href="VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
                     <a href="Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
                     <a href="Forest-Falls-Behind.html">Forest Falls Behind</a>
+                    <a href="Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
             </p>
         </div>
 
@@ -62,7 +63,7 @@
     </div>
 
 <div class="footer">
-    <p> Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a> © 2025</p>
+    <p> Website by <a href="https://www.isobellemccall.com/" target="_blank">IRM</a> © 2026</p>
 </div>
 
 
