--- a/pages/about.html
+++ b/pages/about.html
@@ -27,6 +27,7 @@
                 <a href="VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
                     <a href="Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
                     <a href="Forest-Falls-Behind.html">Forest Falls Behind</a>
+                    <a href="Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
             </p>
         </div>
 
@@ -44,9 +45,13 @@
         <p>Maddison Wandel is a visual artist and writer based in Naarm/Melbourne.
             <br>
             <br>
-            My MADA Bachelor of Fine Art (Honours) 2025 proposal can be found <a href="../pdfs/Maddison Shae Wandel 2024 Honours Proposal.pdf" target="_blank">here</a>.
+            My MADA Bachelor of Fine Art (Honours) 2025 exegesis can be found <a href="../pdfs/Exegesis-a street without her name-Maddison Wandel .pdf" target="_blank">here</a>.
             <br>
             <br>
+            <em>"While the fragmented storyboard sets a mysterious tone, it is Wandel’s use of familiar hometown iconography—aimless driving, stolen signage, the charged quiet of a night field—that produces the work’s deeper, uncanny pull. This sense of familiarity is unsettled the moment we realise that what we recognise is not our memories, but Wandel’s own personal and constructed imagery."</em>
+            <br>
+            <br>
+            — Wawe Ransfield, <em>'Honours, Monash Art, Design and Architecture,'</em> <a href="https://mass.memoreview.net/2025/monash-art-design-and-architecture-by-wawe-ransfield">MASS MEMO</a> 2025.
             
             </p>
     </div>
@@ -54,7 +59,7 @@
     </div>
 
 <div class="footer">
-    <p> Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a> © 2025</p>
+    <p> Website by <a href="https://www.isobellemccall.com/" target="_blank">IRM</a> © 2026</p>
 </div>
 
 
