--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="navigation">
         <div class="item">
-            <a href="pages/about.html">About</a>
+            <a href="/pages/about.html">About</a>
         </div>
 
         <div class="item">
@@ -27,6 +27,7 @@
                 <a href="pages/VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
                     <a href="pages/Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
                     <a href="pages/Forest-Falls-Behind.html">Forest Falls Behind</a>
+                    <a href="pages/Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
             </p>
         </div>
 
@@ -47,7 +48,7 @@
     </div>
 
 <div class="footer">
-    <p> Website designed and developed by <a href="https://www.isobellemccall.com/" target="_blank">Isobelle R McCall</a> © 2025</p>
+    <p> Website by <a href="https://www.isobellemccall.com/" target="_blank">IRM</a> © 2026</p>
 </div>
 
 
