Update exegesis link for Maddison Wandel

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
         <p>Maddison Wandel is a visual artist and writer based in Naarm/Melbourne.
             <br>
             <br>
-            My MADA Bachelor of Fine Art (Honours) 2025 exegesis can be found <a href="../pdfs/Exegesis-a street without her name-Maddison Wandel .pdf" target="_blank">here</a>.
+            My MADA Bachelor of Fine Art (Honours) 2025 exegesis can be found <a href="../pdfs/Exegesis-Maddison-Wandel-2025.pdf" target="_blank">here</a>.
             <br>
             <br>
             <em>"While the fragmented storyboard sets a mysterious tone, it is Wandel’s use of familiar hometown iconography—aimless driving, stolen signage, the charged quiet of a night field—that produces the work’s deeper, uncanny pull. This sense of familiarity is unsettled the moment we realise that what we recognise is not our memories, but Wandel’s own personal and constructed imagery."</em>
