--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/page-elements/mw-favicon.png" type="mw-favicon">
+    <link rel="shortcut icon" href="../img/page-elements/mw-favicon.png" type="mw-favicon">
     <title>Maddison Wandel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body data-page="contact">
     
 <div class="header">
-    <p>Maddison Wandel</p>
+    <a href="https://isoebell.github.io/MaddisonWandel/">Maddison Wandel</a>
 </div>
 
 <div class="middle">
@@ -24,9 +24,9 @@
         <div class="item">
             <p class="title">Exhibitions</p>
             <p class="infoText hidden">
-                    <a href="/Exhibitions/Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
-                    <a href="/Exhibitions/VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
-                    <a href="/Exhibitions/Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
+                    <a href="Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
+                    <a href="VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
+                    <a href="Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
                     <a href="Forest-Falls-Behind.html">Forest Falls Behind</a>
             </p>
         </div>
@@ -41,8 +41,14 @@
 
     </div>
 
-    <div class="hero-img">
-        <img src="img/landing.jpg" alt="landing">
+    <div class="content">
+        <p>Email: <a href="mailto:maddisonshaewandel@gmail.com">maddisonshaewandel@gmail.com</a>
+            <br>
+            Instagram: <a href="https://www.instagram.com/maddisonwandel/" target="_blank">@maddisonwandel</a>
+            <br>
+            <br>
+            
+            </p>
     </div>
 
     </div>
@@ -53,7 +59,7 @@
 
 
 </div>
-<script src="script.js"></script>
+<script src="../script.js"></script>
 
 </body>
 
