--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
         <div class="item">
             <p class="title">Exhibitions</p>
             <p class="infoText hidden">
-                    <a href="Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
-                    <a href="VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
-                    <a href="Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
-                    <a href="Forest-Falls-Behind.html">Forest Falls Behind</a>
+                    <a href="/Exhibitions/Monash-Grad-Show-2025.html"> Monash Gradshow 2025 (Honours)</a>
+                    <a href="/Exhibitions/VCA-Graduate-Exhibition-2024.html">VCA Graduate Exhibition 2024</a>
+                    <a href="/Exhibitions/Majilis-Travelling-Fellowship-2024.html">Majilis Travelling Fellowship 2024</a>
+                    <a href="/Exhibitions/Forest-Falls-Behind.html">Forest Falls Behind</a>
             </p>
         </div>
 
