--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <em>"While the fragmented storyboard sets a mysterious tone, it is Wandel’s use of familiar hometown iconography—aimless driving, stolen signage, the charged quiet of a night field—that produces the work’s deeper, uncanny pull. This sense of familiarity is unsettled the moment we realise that what we recognise is not our memories, but Wandel’s own personal and constructed imagery."</em>
             <br>
             <br>
-            — Wawe Ransfield, <em>'Honours, Monash Art, Design and Architecture,'</em> <a href="https://mass.memoreview.net/2025/monash-art-design-and-architecture-by-wawe-ransfield">MASS MEMO</a> 2025.
+            — Wawe Ransfield, <em>'Honours, Monash Art, Design and Architecture,'</em> <a href="https://mass.memoreview.net/2025/monash-art-design-and-architecture-by-wawe-ransfield" target="_blank">MASS MEMO</a> 2025.
             
             </p>
     </div>
